--- a/package.json
+++ b/package.json
@@ -1,84 +1,48 @@
 {
   "name": "langchain-azure-js",
-  "version": "0.0.0",
-  "description": "Sample INTEGRATION_SHORT_NAME integration for LangChain.js",
-  "type": "module",
+  "private": true,
   "engines": {
     "node": ">=18"
   },
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "homepage": "https://github.com/langchain-ai/langchain-azure-js",
+  "workspaces": [
+    "langchain",
+    "langchain-core",
+    "libs/*",
+    "examples",
+    "docs/*"
+  ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:langchain-ai/langchainjs.git"
+    "url": "https://github.com/langchain-ai/langchain-azure-js.git"
   },
-  "homepage": "https://github.com/langchain-ai/langchain-azure-js",
   "packageManager": "yarn@3.5.1",
   "scripts": {
-    "build": "yarn lc_build --create-entrypoints --pre --tree-shaking",
-    "lint:eslint": "NODE_OPTIONS=--max-old-space-size=4096 eslint --cache --ext .ts,.js src/",
-    "lint:dpdm": "dpdm --exit-code circular:1 --no-warning --no-tree src/*.ts src/**/*.ts",
-    "lint": "yarn lint:eslint && yarn lint:dpdm",
-    "lint:fix": "yarn lint:eslint --fix && yarn lint:dpdm",
-    "clean": "rm -rf .turbo dist/",
-    "prepack": "yarn build",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --testPathIgnorePatterns=\\.int\\.test.ts --testTimeout 30000 --maxWorkers=50%",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch --testPathIgnorePatterns=\\.int\\.test.ts",
-    "test:single": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.cjs --testTimeout 100000",
-    "test:int": "NODE_OPTIONS=--experimental-vm-modules jest --testPathPattern=\\.int\\.test.ts --testTimeout 100000 --maxWorkers=50%",
-    "format": "prettier --config .prettierrc --write \"src\"",
-    "format:check": "prettier --config .prettierrc --check \"src\""
+    "build": "turbo build --filter=\"!test-exports-*\"",
+    "turbo:command": "turbo",
+    "clean": "turbo clean",
+    "format": "turbo format --concurrency=50",
+    "format:check": "turbo format:check --concurrency=50",
+    "lint": "turbo lint --concurrency=50",
+    "lint:fix": "turbo lint:fix --concurrency=50",
+    "test": "yarn test:unit && yarn test:exports:docker",
+    "test:unit": "turbo test --filter=\"!test-exports-*\" --filter=!examples --filter=!api_refs --filter=!core_docs --filter=!create-langchain-integration",
+    "test:unit:ci": "turbo test:ci",
+    "test:int": "yarn run test:int:deps && turbo test:integration ; yarn run test:int:deps:down",
+    "release": "node release_workspace.js --workspace"
   },
   "author": "LangChain",
   "license": "MIT",
-  "peerDependencies": {
-    "@langchain/core": ">=0.3.0 <0.4.0"
-  },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
-    "@langchain/core": "^0.3.43",
-    "@langchain/scripts": ">=0.1.0 <0.2.0",
-    "@swc/core": "^1.3.90",
-    "@swc/jest": "^0.2.29",
-    "@tsconfig/recommended": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "dotenv": "^16.3.1",
-    "dpdm": "^3.12.0",
-    "eslint": "^8.33.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-no-instanceof": "^1.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
-    "jest-environment-node": "^29.6.4",
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/jest": "^29.5.3",
+    "@types/semver": "^7",
+    "commander": "^11.1.0",
+    "dotenv": "^16.0.3",
+    "lint-staged": "^13.1.1",
     "prettier": "^2.8.3",
-    "release-it": "^15.10.1",
-    "rollup": "^4.5.2",
-    "ts-jest": "^29.1.0",
-    "typescript": "<5.2.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "exports": {
-    ".": {
-      "types": {
-        "import": "./index.d.ts",
-        "require": "./index.d.cts",
-        "default": "./index.d.ts"
-      },
-      "import": "./index.js",
-      "require": "./index.cjs"
-    },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist/",
-    "index.cjs",
-    "index.js",
-    "index.d.ts",
-    "index.d.cts"
-  ]
+    "semver": "^7.5.4",
+    "turbo": "^1.13.3",
+    "typescript": "~5.1.6"
+  }
 }
