--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format:check": "turbo format:check --concurrency=50",
     "lint": "turbo lint --concurrency=50",
     "lint:fix": "turbo lint:fix --concurrency=50",
-    "test": "yarn test:unit && yarn test:exports:docker",
+    "test": "yarn test:unit",
     "test:unit": "turbo test --filter=\"!test-exports-*\" --filter=!examples --filter=!api_refs --filter=!core_docs --filter=!create-langchain-integration",
     "test:unit:ci": "turbo test:ci",
     "test:int": "yarn run test:int:deps && turbo test:integration ; yarn run test:int:deps:down",
