--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -37,8 +37,8 @@ jobs:
         # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         queries: security-extended
         paths-ignore:
-          - 'release_workspace.js'
-          - '**/*.test.ts'
+        - '/release_workspace.js'
+        - '**/*.test.ts'
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
