--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,6 +1,23 @@
 name: CodeQL config
-queries: 
+
+# Needed to customize the security-extended query suite
+disable-default-queries: true
+queries:
   - uses: security-extended
+query-filters:
+  - exclude:
+      id: actions/missing-workflow-permissions
+threat-models: local
 paths-ignore:
-  - '/release_workspace.js'
-  - '**/*.test.ts'
+  - "/release_workspace.js"
+  - "**/create-entrypoints.js"
+  - "examples/*.ts"
+  - "examples/**/*.ts"
+  - "**/*.test.ts"
+  - "**/examples/*.ts"
+  - "**/examples/**/*.ts"
+  - "**/*.test.ts"
+  - "**/tests/**/*.ts"
+  - "**/__tests__/**/*.ts"
+  - "/libs/langchain-scripts/**/*.ts"
+  - "docs/core_docs/scripts/*.js"
